# newcall

./: .gitignore  CODE_OF_CONDUCT.md  install_nodejs.sh  package.json  setup.cfg  setup.py
.github/workflows/: main.yml  sp.yml
newcalls/: scaffold.py
newcalls/methods/core/: binding_runner.py
newcalls/mtproto/: newgram_client.py
